Alterado o nome do icone dos botões atualizar e update

--- a/bugWeb2/WebContent/admin/bugs.xhtml
+++ b/bugWeb2/WebContent/admin/bugs.xhtml
@@ -57,11 +57,11 @@
 			
 			<p:column style="width:2%">
 				<f:facet name="header">Alterar</f:facet>
-				<p:commandButton action="#{bugMB.preparedEdit(bug.id)}" icon="ui-icone-pencil" title="Alterar Bug" update="@all"/>
+				<p:commandButton action="#{bugMB.preparedEdit(bug.id)}" icon="ui-icon-pencil" title="Alterar Bug" update="@all"/>
 			</p:column>
 			<p:column style="width:2%">
 				<f:facet name="header">Excluir</f:facet>
-				<p:commandButton action="#{bugMB.delete(bug.id)}" icon="ui-icone-trash" title="Excluir Bug" update="@all"/>
+				<p:commandButton action="#{bugMB.delete(bug.id)}" icon="ui-icon-trash" title="Excluir Bug" update="@all"/>
 			</p:column>
 			<ui:remove>
 			<p:column style="width:4%">
